--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "fc_app_2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://MartaPiatek-Bar.github.io/REACT-projekt-2",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "homepage": "https://MartaPiatek-Bar.github.io/REACT-projekt-2",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
